# P1v2

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  debug_ausopen_2023_matches.csv  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: ci.yml
configs/: pipeline_run.yaml  player_aliases.csv  tournaments_2023.yaml  tournaments_2023_atp_ausopen.yaml  tournaments_2024.yaml
data/processed/: ausopen_2023_atp_bankroll.csv  ausopen_2023_atp_features.csv  ausopen_2023_atp_features_labeled.csv  ausopen_2023_atp_features_labeled_odds.csv  ausopen_2023_atp_ids.csv  ausopen_2023_atp_predictions.csv  ausopen_2023_atp_predictions_withodds.csv  ausopen_2023_atp_value_bets.csv  ausopen_2023_atp_with_odds.csv  ausopen_2023_wta_features.csv  ausopen_2023_wta_predictions.csv  indianwells_2023_atp_features.csv  indianwells_2023_atp_predictions.csv  indianwells_2023_wta_features.csv  indianwells_2023_wta_predictions.csv  madrid_2023_atp_features.csv  madrid_2023_wta_features.csv  miami_2023_atp_features.csv  miami_2023_atp_predictions.csv  miami_2023_wta_features.csv  miami_2023_wta_predictions.csv  usopen_2023_atp_features.csv  usopen_2023_atp_predictions.csv  usopen_2023_wta_features.csv  usopen_2023_wta_predictions.csv  wimbledon_2023_atp_features.csv  wimbledon_2023_atp_predictions.csv  wimbledon_2023_wta_features.csv  wimbledon_2023_wta_predictions.csv
repo-backup/: config  packed-refs
repo-backup/objects/info/: commit-graph  packs
repo-backup/objects/pack/: pack-8151f6c30dd5497f9387c8973674dc126fc8e545.idx
scripts/analysis/: analyze_ev_distribution.py  plot_tournament_leaderboard.py  summarize_value_bets_by_match.py  summarize_value_bets_by_tournament.py
scripts/builders/: build_all_tournaments_from_yaml.py  build_clean_matches_generic.py
scripts/modeling/: train_ev_filter_model.py
scripts/pipeline/: build_odds_features.py  detect_value_bets.py  run_full_pipeline.py
src/scripts/: README.md
src/scripts/analysis/: analyze_ev_distribution.py  plot_tournament_leaderboard.py  summarize_value_bets_by_match.py  (+1 more)
tests/: test_build_clean_matches_generic.py  test_cli_utils.py  test_column_naming.py  test_config_loader.py  test_logger.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_snapshot_parser.py  test_utils.py
tests/pipeline/: test_detect_value_bets.py
tests/utils/: test_betting_math.py  test_schema.py
(+56 files in other folders)
