# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1v2"
version = "0.1.0"
description = "Tennis Value Betting Model and Pipeline"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "cerberus"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

# Skip virtualenv, example data folders, git metadata, and build artifacts
exclude = '''
/(
    \.venv
  | data/tennis_atp/examples
  | data/tennis_wta/examples
  | \.git
  | build
  | dist
)/
'''
